<resources>
    <string name="app_name">DonationApp</string>
    <string name="enterEmail">Email</string>
    <string name="noaccount">Não tem uma conta? Crie aqui.</string>
    <string name="enterPassword">Senha</string>
    <string name="register">Cadastrar</string>
    <string name="enterName">Nome</string>
    <string name="enter">Entrar</string>
    <string name="home">Home</string>
    <string name="agenda">Agenda</string>
    <string name="map">Mapa</string>
    <string name="profile">Perfil</string>
    <string name="logout">Sair</string>
    <string name="errorLoginMessage">Erro ao tentar fazer log-in, verifique seu email e senha.</string>
    <string name="confirmDeleteAllMessages">Tem certeza que deseja deletar todas as mensagens ? Essa ação fará com que este contato não apareça na sua tela de conversas.</string>
    <string name="confirmDeleteOffer">Tem certeza que deseja deletar essa oferta ?</string>
    <string name="tryAgain">Tentar novamente</string>
    <string name="institution">Instituição</string>
    <string name="establishment">Estabelecimento</string>
    <string name="enterAssociationName">Insira o nome da associação</string>
    <string name="selectionDescription">Para prosseguir com a criação de conta você precisa se associar a um estabelecimento ou instituição.</string>
    <string name="proceed">Prosseguir</string>
    <string name="noassociation">Registre sua instituição ou estabelecimento clicando aqui.</string>
    <string name="registerInstitution">Registrar instituição</string>
    <string name="registerEstablishment">Registrar estabelecimento</string>
    <string name="enterInstitutionName">Digite o nome da instituição</string>
    <string name="enterInstitutionAddress">Digite o endereço da instituição</string>
    <string name="enterInstitutionPhone">Digite o telefone da instituição</string>
    <string name="enterInstitutionType">Digite o tipo da instituição</string>
    <string name="enterEstablishmentName">Digite o nome do estabelecimento</string>
    <string name="enterEstablishmentAddress">Digite o endereço do estabelecimento</string>
    <string name="enterEstablishmentPhone">Digite o telefone do estabelecimento</string>
    <string name="cancel">Cancelar</string>
    <string name="confirm">Confirmar</string>
    <string name="fab_home_desc">Adicionar</string>
    <string name="accessProfile">Acessar perfil</string>
    <string name="sendMessage">Enviar mensagem</string>
    <string name="enterCardDescription">Digite a descrição da sua oferta</string>
    <string name="createPost">Criar postagem</string>
    <string name="enterAccountType">Tipo de conta</string>
    <string name="enterPhone">Telefone</string>
    <string name="send">Enviar</string>
    <string name="photo">Insira sua foto aqui</string>
    <string name="conversations">Conversas</string>
    <string name="solicitations">Solicitações</string>
    <string name="description">Descrição:</string>
    <string name="address">Endereço:</string>
    <string name="phone">Telefone:</string>
    <string name="editHere"><u>Edite aqui</u></string>
    <string name="request">Solicitar</string>
    <string name="selectDate">Selecione a data</string>
    <string name="decline">Recusar</string>
    <string name="solicitationAcceptConfirmation">A oferta referente a está solicitação será excluída. Deseja continuar ?</string>
    <string name="solicitationDeclineConfirmation">A solicitação será recusada e deletada. Deseja continuar ?</string>
    <string name="search">Procurar</string>
    <string name="insertAddress">Insira um endereço</string>
    <string name="confirmationLocationSelection">O endereço da sua associação é \"%1$s\", está correto ?</string>
    <string name="requestPartnership">Solicitar parceria</string>
    <string name="info">Informações</string>
    <string name="home_info">
        Nesta tela você pode visualizar ou adicionar postagens sobre ofertas de alimentos.
        \n\nCada postagem dispõe de data, hora, tipo e quantidade do alimento, além do nome do estabelecimento que o oferece.
        \n\nOs beneficiários podem enviar mensagens para os estabelecimentos em busca de mais informações e posteriormente solicitar a entrega/busca do alimento.
    </string>
    <string name="agenda_info">
        Nesta tela você pode visualizar as datas de entrega/busca marcadas.
        \n\nAs datas apresentadas com uma faixa de verde escura à direita, representam datas referentes à parcerias.
        \n\nAs datas apresentadas com uma faixa vermelha à direita representam datas próximas à atual.
        \n\nAs datas apresentadas com uma faixa cinza à direita representam datas que se passaram.
    </string>
    <string name="map_info">
        Nesta tela você pode visualizar o mapa no qual os estabelecimentos e instituições participantes do projeto estão dispostos em pinos vermelhos.
    </string>
    <string name="profile_info">
        Nesta tela você pode visualizar e editar as informações referentes ao seu perfil.
        \n\nPara trocar a foto de perfil você pode tocar na foto.
        \n\nPara alterar outras informações toque nos textos de edição.
    </string>
    <string name="create_card_info">
        Para postar uma oferta, descreva, com clareza, informações sobre o alimento como: tipo, quantidade, estado e data de validade.
        \n\nInforme também qualquer observação que julgar necessária.
    </string>
    <string name="insertEstablishmentName">Insira o nome do estabelecimento</string>
    <string name="old">Antigas</string>
    <string name="recent">Recentes</string>
    <string name="forgetPassword">Esqueceu a senha ?</string>
    <string name="myOffers">Minhas Ofertas</string>
    <string name="edit">Editar</string>
    <string name="delete">Deletar</string>
    <string name="updateOffer">Edite a oferta</string>
    <string name="enterNewCardDescription">Digite a nova descrição da sua oferta</string>
    <string name="progress">Progresso</string>
    <string name="deleteAllMessages">Apagar todas mensagens</string>
</resources>