<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectionActivity">

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/selectionDescription"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/autoCompleteText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enterAssociationName"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/textViewDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonForward"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/proceed"
        android:background="@drawable/bg_button_rounded"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autoCompleteText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonCreateInstitution"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/registerInstitution"
        android:textColor="@color/white"
        android:background="@drawable/bg_button_rounded_2"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonForward"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonCreateEstablishment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/registerEstablishment"
        android:textColor="@color/white"
        android:background="@drawable/bg_button_rounded_2"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCreateInstitution"
        />


</androidx.constraintlayout.widget.ConstraintLayout>