<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialogSolicitationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/updateOffer"
        android:textColor="@color/green1"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextCardDescription"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:minHeight="200dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/enterNewCardDescription"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogSolicitationTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textMultiLine"
            android:gravity="top"
            android:layout_width="match_parent"
            android:minHeight="200dp"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/dialogProgressText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/progress"
        android:textColor="@color/green1"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextCardDescription"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        style="@style/Widget.MaterialComponents.LinearProgressIndicator"
        app:trackThickness="15dp"
        android:id="@+id/progressBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogProgressText"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/groupButtonProgress"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar">

        <Button
            android:id="@+id/minusButton"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="-"
            android:textStyle="bold"
            style="?attr/materialButtonOutlinedStyle"
            />
        <Button
            android:id="@+id/percentageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="80dp"
            android:text=""
            android:clickable="false"
            android:textStyle="bold"
            style="?attr/materialButtonOutlinedStyle"
            />
        <Button
            android:id="@+id/plusButton"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="+"
            android:textStyle="bold"
            style="?attr/materialButtonOutlinedStyle"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="16dp"
        android:gravity="end"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupButtonProgress">

        <Button
            android:id="@+id/cancelButtonSolicitationDialog"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginHorizontal="8dp"
            android:text="@string/cancel"
            android:textSize="16sp" />

        <Button
            android:id="@+id/confirmButtonSolicitationDialog"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginHorizontal="8dp"
            android:text="@string/send"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>